[metadata]
name = alftools
description = Tools for the ALF Monte Carlo package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/alftools
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/dylanljones/alftools

[options]
packages = find:
install_requires =
    setuptools>=60.0.0
    setuptools-scm[toml]>=4
    numpy>=1.20.0
    scipy>=1.5.0
    matplotlib>=3.0.0
    pytest>=6.0.0
    hypothesis>=6.0.0
    f90nml>=1.3.0
    h5py>=3.0.0
    pprintpp>=0.4.0
    lattpy>= 0.7.6
    gftool>=0.11.0
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    pytest-cov


[aliases]
test=pytest

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`

[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    lattpy/tests/*,
    docs/*,
    .social/*,
    _version.py,
